Add underscore dependency

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "async": "^0.8.0",
     "jsesc": "^0.4.3",
     "q": "^1.0.1",
-    "stable": "^0.1.5"
+    "stable": "^0.1.5",
+    "underscore": "~1.6.0"
   }
 }
